--- a/app/src/main/res/layout/activity_client_support.xml
+++ b/app/src/main/res/layout/activity_client_support.xml
@@ -1,12 +1,54 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
+    android:gravity="center"
     tools:context=".ClientSupportActivity">
 
     <TextView
+        android:id="@+id/textViewAssistance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/clientsupport"></TextView>
+        android:text="Do you need assistance?"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+    <Button
+        android:id="@+id/buttonCallSupport"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Call Customer Support"
+        android:layout_below="@id/textViewAssistance"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:id="@+id/textViewOr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="or"
+        android:textSize="16sp"
+        android:layout_below="@id/buttonCallSupport"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"/>
+
+    <EditText
+        android:id="@+id/editTextMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter your message"
+        android:inputType="textMultiLine"
+        android:layout_below="@id/textViewOr"
+        android:layout_marginTop="8dp"/>
+
+    <Button
+        android:id="@+id/buttonTextSupport"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Text Customer Support"
+        android:layout_below="@id/editTextMessage"
+        android:layout_marginTop="16dp"/>
 </RelativeLayout>
