--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -5,30 +5,21 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:gravity="center"
-    tools:context=".ResourcesActivity">
+    tools:context=".FAQActivity">
 
-    <Button
-        android:id="@+id/faqButton"
+    <Spinner
+        android:id="@+id/questionSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="FAQ"
         android:layout_marginBottom="16dp"/>
 
-    <Button
-        android:id="@+id/adviceButton"
+    <TextView
+        android:id="@+id/answerTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Advice"
-        android:layout_below="@id/faqButton"
+        android:layout_below="@id/questionSpinner"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"/>
-
-    <Button
-        android:id="@+id/otherResourcesButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Other Resources"
-        android:layout_below="@id/adviceButton"
-        android:layout_marginTop="8dp"/>
+        android:textSize="16sp"
+        android:textColor="#000000"/>
 
 </RelativeLayout>
